--- a/talks/index.html
+++ b/talks/index.html
@@ -551,47 +551,114 @@ summarize the table from the paper
       </ul>
     </ul>
 
-    <p class="center fragment">There is a desire to use a suitable abstraction level for a given hardware block</p>
+    <p class="center fragment">There is a desire to use a suitable abstraction level for a given hardware block / model</p>
   </section>
 
   <section>
-    <h3>Why Mixed Abstraction?</h3>
+    <h3>Mixed Abstraction HDLs</h3>
 
+    <ul>
+      <li class="fragment">Each dialect is isolated (for simulation and design), but we could define interaction semantics between them</li>
+      <li class="fragment">HDLs only target a specific dialect: mixing abstractions isn't well supported outside blackboxing</li>
+    </ul>
 
+    <p class="fragment center">The next iteration of HDLs should strive to support mixing abstractions in design</p>
+  </section>
+
+  <section>
+    <!-- Discuss state sharing, simulation performance, perf model correlation -->
+    <h3>Mixing RTL and Higher-Level Abstractions</h3>
+
+    <ul>
+      <li class="fragment">Transaction-level modeling and latency-insensitive interfaces are a canonical solution to the integration question</li>
+      <li class="fragment">At a finer design granularity, this breaks down when we want to <em>share state</em> between RTL and higher-level descriptions</li>
+      <li class="fragment">Simulation performance can be improved</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Mixing RTL and Event-Based Abstractions</h3>
+    <!-- Discuss clocking, latches, behavioral models -->
+
+    <ul>
+      <li class="fragment">Many common circuit constructs (clock generators/muxes, async resets) are easier to describe in the event-driven paradigm</li>
+      <li class="fragment">Verilog's scheduling algorithm provides a starting point for mixing gate-level and evented blocks</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Mixed-Abstraction HDLs</h3>
+
+    <ul>
+      <li class="fragment">How do the abstractions interact with each other, even when crossing multiple levels?</li>
+      <li class="fragment">What API do hardware designers want? For what circuits is abstraction most useful?</li>
+    </ul>
   </section>
 </section>
 
 <section>
-<h3>Mixing RTL and Higher-Level Abstractions</h3>
-<!-- Discuss state sharing, simulation performance, perf model correlation -->
-</section>
+  <section>
+    <h3>Other Implementation Questions for HDLs</h3>
+  </section>
 
-<section>
-<h3>Mixing RTL and Event-Based Abstractions</h3>
-<!-- Discuss clocking, latches, behavioral models -->
-</section>
+  <section>
+    <!-- What primitives belong in an IR? -->
+    <h3>HDL Primitives</h3>
+    <p class="fragment center">What primitives belong in an IR/HDL?</p>
 
-<section>
-<h3>IR Primitives</h3>
-<!-- What primitives belong in an IR? -->
-</section>
+    <ul class="fragment">
+      <li>SRAMs (with what features?), CAMs</li>
+      <li>Should PDK primitives be directly representable or must they be blackboxed?</li>
+    </ul>
+  </section>
 
-<section>
-<h3>Preserving Semantics Through IR Lowering</h3>
-<!-- Related question: If we could design a synthesis frontend from scratch, what semantics are most valuable to preserve from the RTL or above? -->
-</section>
+  <section>
+    <h3>Preserving Semantics Through IR Lowering</h3>
+    <!-- Related question: If we could design a synthesis frontend from scratch, what semantics are most valuable to preserve from the RTL or above? -->
 
-<section>
-<h3>Modules: What Are they Good For?</h3>
-<!-- Can modules be inferred, what's the point!? -->
-</section>
+    <p class="fragment center">IRs try to be minimal, but HDLs try to capture design semantics. How do we pass intent to synthesis?</p>
 
-<section>
-<h3>Incremental-First HDLs</h3>
-<!-- Incrementalism has percolated through many things (from simple within-run memoization, to run-to-run caching of build descriptions ala Buck2/Bazel), we really need term-level incrementalism since HW generators suffer from the same problems as build system frontends as the build/HW design grow very large -->
-<!-- Discuss within-run incrementalism and run-to-run incrementalism -->
-</section>
+    <p class="fragment center">If we could design a synthesis frontend from scratch, what semantics are most valuable to preserve from RTL or above?</li>
+  </section>
 
+  <section>
+    <!-- Can modules be inferred, what's the point!? -->
+    <h3>Modules: What Are they Good For?</h3>
+
+    <ul class="fragment">
+      <li>Modules are used for 1) instantiation, 2) parameterization boundary, 3) adding hierarchy</li>
+      <li>Let's consider the analogies - <em>modules:functions</em>, <em>parameters:function arguments</em>, <em>hierarchy:call stack</em></li>
+    </ul>
+
+    <p class="fragment center">Are modules a good abstraction? Can we infer them? Can we remove the need for XMRs?</p>
+  </section>
+
+  <section>
+    <!-- Incrementalism has percolated through many things (from simple within-run memoization, to run-to-run caching of build descriptions ala Buck2/Bazel), we really need term-level incrementalism since HW generators suffer from the same problems as build system frontends as the build/HW design grow very large -->
+    <!-- Discuss within-run incrementalism and run-to-run incrementalism -->
+    <h3>Incremental Elaboration for HDLs</h3>
+
+    <ul class="fragment">
+      <li>As hardware generators grow, elaboration becomes an iteration bottleneck</li>
+      <li>Run-to-run caching requires analysis of generator source code, not just simple function memoization</li>
+    </ul>
+
+    <p class="fragment center">How do we make run-to-run caching and incremental elaboration viable? Can content-addressable languages help?</p>
+  </section>
+
+  <section>
+    <h3>Questions</h3>
+
+    <ul class="fragment">
+      <li>What are the considerations when designing mixed-abstraction HDLs?</li>
+      <li>What primitives belong in an HDL / IR?</li>
+      <li>How can we preserve semantics through to synthesis?</li>
+      <li>Are modules still a good circuit abstraction in a mixed-abstraction world?</li>
+      <li>How can we design an HDL with automated incremental elaboration?</li>
+    </ul>
+
+  </section>
+</section>
   </div>
 </div>
     <script type="module">
